Collision system part started.
Alien timer being worked on.